# numproj2

./: pyproject.toml
problems/: exercise1.ipynb  exercise2.ipynb  exercise3.ipynb
src/numproj2/: __init__.py
