[project]
name = "numproj2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JakobEhlern", email = "jakob.ehlern@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
